[gd_scene load_steps=3 format=3 uid="uid://cw61jejhmqw73"]

[ext_resource type="Theme" uid="uid://crcivs73grrf7" path="res://textures/hud/custom_theme.tres" id="1_yrt7q"]
[ext_resource type="Script" path="res://misc/hud/settings_menu/audio_menu.gd" id="2_wj8r0"]

[node name="AudioMenu" type="PanelContainer" node_paths=PackedStringArray("first_selection")]
custom_minimum_size = Vector2(380, 300)
offset_right = 380.0
offset_bottom = 300.0
theme = ExtResource("1_yrt7q")
script = ExtResource("2_wj8r0")
first_selection = NodePath("SettingsContainer/Buttons/MasterSlider")

[node name="SettingsContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Buttons" type="VBoxContainer" parent="SettingsContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="MasterSlider" type="HSlider" parent="SettingsContainer/Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 32)
layout_mode = 2
focus_neighbor_top = NodePath("../DialogueSlider")
focus_neighbor_bottom = NodePath("../MusicSlider")
focus_next = NodePath("../MusicSlider")
focus_previous = NodePath("../DialogueSlider")
max_value = 1.0
step = 0.01
value = 0.5

[node name="MusicSlider" type="HSlider" parent="SettingsContainer/Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 32)
layout_mode = 2
focus_neighbor_top = NodePath("../MasterSlider")
focus_neighbor_bottom = NodePath("../SFXSlider")
focus_next = NodePath("../SFXSlider")
focus_previous = NodePath("../MasterSlider")
max_value = 1.0
step = 0.01
value = 1.0

[node name="SFXSlider" type="HSlider" parent="SettingsContainer/Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 32)
layout_mode = 2
focus_neighbor_top = NodePath("../MusicSlider")
focus_neighbor_bottom = NodePath("../DialogueSlider")
focus_next = NodePath("../DialogueSlider")
focus_previous = NodePath("../MusicSlider")
max_value = 1.0
step = 0.01
value = 0.5

[node name="DialogueSlider" type="HSlider" parent="SettingsContainer/Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 32)
layout_mode = 2
focus_neighbor_top = NodePath("../SFXSlider")
focus_neighbor_bottom = NodePath("../MasterSlider")
focus_next = NodePath("../MasterSlider")
focus_previous = NodePath("../SFXSlider")
max_value = 1.0
step = 0.01
value = 1.0

[node name="Labels" type="VBoxContainer" parent="SettingsContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="MasterLabel" type="Label" parent="SettingsContainer/Labels"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
text = "Master Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicLabel" type="Label" parent="SettingsContainer/Labels"]
custom_minimum_size = Vector2(64, 32)
layout_mode = 2
text = "Music Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXLabel" type="Label" parent="SettingsContainer/Labels"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
text = "SFX Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DialogueLabel" type="Label" parent="SettingsContainer/Labels"]
custom_minimum_size = Vector2(64, 32)
layout_mode = 2
text = "Dialogue Volume"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="value_changed" from="SettingsContainer/Buttons/MasterSlider" to="." method="master_slider_value_changed"]
[connection signal="value_changed" from="SettingsContainer/Buttons/MusicSlider" to="." method="music_slider_value_changed"]
[connection signal="value_changed" from="SettingsContainer/Buttons/SFXSlider" to="." method="sfx_slider_value_changed"]
[connection signal="value_changed" from="SettingsContainer/Buttons/DialogueSlider" to="." method="voice_slider_value_changed"]
